refactor: Apply automatic refactoring